[project]
name = "fathom-mcp"
version = "0.1.0"
description = "MCP server for Fathom AI meeting recordings — retrieve summaries, transcripts, and action items."
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
